fix testreal
