# contracts/generated/openapi/modules/selling.yaml
@@ -8846,24 +8846,42 @@ x-contract:
       operation_id: makePurchaseOrderFromSupplierQuotation
       path_suffix: make-purchase-order
       handler: letron_api.control.api.make_purchase_order
+      request_schema:
+        type: object
+        additionalProperties: false
+      response_schema: PurchaseOrderResponse
+      response_envelope: message
     - doctype: Bank Transaction
       module: Accounts
       action: reconcile
       operation_id: reconcileBankTransaction
       path_suffix: reconcile
       handler: letron_api.finance.accounts_reconciliation.reconcile_bank_transaction
+      request_schema: BankTransactionReconcileRequest
+      response_schema: BankTransactionResponse
+      response_envelope: message
     - doctype: Bank Transaction
       module: Accounts
       action: unreconcile
       operation_id: unreconcileBankTransaction
       path_suffix: unreconcile
       handler: letron_api.finance.accounts_reconciliation.unreconcile_bank_transaction
+      request_schema:
+        type: object
+        additionalProperties: false
+      response_schema: BankTransactionResponse
+      response_envelope: message
     - doctype: Bank Transaction Rule
       module: Accounts
       action: run-evaluation
       operation_id: runBankTransactionRules
       path_suffix: run-evaluation
       handler: letron_api.finance.banking.run_rule_evaluation
+      request_schema:
+        type: object
+        additionalProperties: false
+      response_schema: FrappeResponse
+      response_envelope: message
     custom_routes:
     - module: Files
       resource: attachments
@@ -9058,6 +9076,14 @@ x-contract:
         material_request:
           type: string
         material_request_item:
+          type: string
+    - doctype: Purchase Receipt Item
+      allowed_write_fields:
+        stock_uom:
+          type: string
+        purchase_order:
+          type: string
+        purchase_order_item:
           type: string
     generated_schemas:
       PurchaseOrchestrationRequest: *id027
